--- a/index.html
+++ b/index.html
@@ -4,62 +4,73 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="script.js"></script> -->
     <title>Document</title>
   </head>
   <body>
-    <p class="dropdown">Привет :)</p>
-    <div class="dropdown">
-      <button
-        class="btn btn-secondary dropdown-toggle"
-        type="button"
-        id="dropdownMenuButton"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        Dropdown button
-      </button>
-      <div class="menu dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-      </div>
-    </div>
+    <input id="from" type="text" />
+    В инпуте написано: <span></span>
+
+    <br />
+
+    <button class="messageBtn">Показать блок</button>
+    <div class="message">Привет :)</div>
+
+    <br />
+
+    <form>
+      <label>
+        Первый инпут:
+        <input class="form-control" type="text" />
+      </label>
+      <br />
+      <br />
+      <label>
+        Второй инпут:
+        <select class="form-control">
+          <option value=""></option>
+          <option value="1">Один</option>
+          <option value="2">Два</option>
+        </select>
+      </label>
+      <br />
+      <br />
+      <button>Отправить</button>
+    </form>
 
     <script>
       "use strict";
-      // 1. Ко всем элементам, имеющим класс "dropdown-item" добавить еще один класс "super-dropdown", необходимо использовать методы forEach и querySelectorAll и свойство classList у элементов.
-      const array = document.querySelectorAll(".dropdown-item");
-      array.forEach((element) => {
-        element.classList.add("super-dropdown");
+      //   1. При изменении значения в input с id="from", значение содержащееся в нем должно моментально отображаться в span. То есть при печати в input'е тег span также должен меняться.
+      document.querySelector("#from").addEventListener("input", (e) => {
+        document.querySelector("span").textContent = e.target.value;
       });
 
-      // 2. У элемента с классом btn необходимо убрать класс "btn-secondary", если он присутствует у этого элемента, либо добавить, если такого класса у элемента не было.
-      const btn = document.querySelector(".btn");
-      btn.classList.remove("btn-secondary");
-      // 3. Необходимо удалить класс "dropdown-menu" у элемента, у которого присутствует класс "menu".
-      const menu = document.querySelector(".menu");
-      menu.classList.remove("dropdown-menu");
-
-      // 4. Используя метод insertAdjacentHTML добавьте после div'a с классом "dropdown" следующую разметку:
-      // `<a href="#">link</a>`
-
-      const dropdown = document.querySelector(".dropdown");
-      dropdown.insertAdjacentHTML("afterend", `<a href="#">link</a>`);
-
-      // 5. У элемента с id "dropdownMenuButton" замените id на "superDropdown".
-      document.querySelector("#dropdownMenuButton").id = "superDropdown";
-
-      // 6. Добавьте атрибут data-dd со значением 3 элементу у которого существует атрибут "aria-labelledby" равный "dropdownMenuButton" используя dataset.
-      const aria = document.querySelector(
-        '[aria-labelledby = "dropdownMenuButton"]'
+      // 2. При клике на кнопку с классом messageBtn необходимо элементу с классом message:
+      // - добавить два класса: animate_animated и animate_fadeInLeftBig
+      // - поставить данному элементу стиль visibility в значение 'visible'.
+      document.querySelector(".messageBtn").addEventListener("click", (e) => {
+        document
+          .querySelector(".message")
+          .classList.add("animate_animated", "animate_fadeInLeftBig");
+        document.querySelector(".message").style = "visibility : visible;";
+      });
+      // 3. Необходимо при отправке формы проверить, заполнены ли все поля в этой форме. Если какое-либо поле не заполнено, форма не должна отправляться, также должны быть подсвечены незаполненные поля (необходимо поставить класс error незаполненным полям). Как только пользователь начинает заполнять какое-либо поле, необходимо, при вводе в данное поле, произвести проверку:
+      // - Если поле пустое, необходимо данное поле подсветить (поставить класс error данному полю).
+      // - Если поле было чем-либо заполнено, подсветку (класс error) необходимо убрать.
+      document.querySelectorAll(".form-control").forEach((element) =>
+        element.addEventListener("input", (e) => {
+          element.classList.add("error");
+          if (e.target.value != "") element.classList.remove("error");
+        })
       );
-
-      aria.dataset.dd = "3";
-
-      // 7. Удалите атрибут type у элемента с классом "dropdown-toggle".
-      document.querySelector(".dropdown-toggle").removeAttribute("type");
+      document.querySelector("form button").addEventListener("click", (e) => {
+        if (document.querySelector(".form-control").value === "") {
+          document.querySelector(".form-control").classList.add("error");
+          e.preventDefault();
+        } else if (document.querySelector("select").value === "") {
+          document.querySelector("select").classList.add("error");
+          e.preventDefault();
+        }
+      });
     </script>
   </body>
 </html>
