--- a/index.html
+++ b/index.html
@@ -7,69 +7,43 @@
     <title>Document</title>
   </head>
   <body>
-    <input id="from" type="text" />
-    В инпуте написано: <span></span>
-
-    <br />
-
-    <button class="messageBtn">Показать блок</button>
-    <div class="message">Привет :)</div>
-
-    <br />
-
-    <form>
-      <label>
-        Первый инпут:
-        <input class="form-control" type="text" />
-      </label>
-      <br />
-      <br />
-      <label>
-        Второй инпут:
-        <select class="form-control">
-          <option value=""></option>
-          <option value="1">Один</option>
-          <option value="2">Два</option>
-        </select>
-      </label>
-      <br />
-      <br />
-      <button>Отправить</button>
-    </form>
-
+    <div class="content"></div>
+    <script src="data.js"></script>
     <script>
-      "use strict";
-      //   1. При изменении значения в input с id="from", значение содержащееся в нем должно моментально отображаться в span. То есть при печати в input'е тег span также должен меняться.
-      document.querySelector("#from").addEventListener("input", (e) => {
-        document.querySelector("span").textContent = e.target.value;
-      });
+      // console.log(data);
+      // data.forEach((element) => {
+      //   console.log(element.link);
+      // });
+      //       Задание 1
+      // 1. Поиск в интернете (бесплатные api примеры).
+      // 2. Найти любые данные, на произвольную тему.
+      // 3. Создать файл data.js.
+      // 4. Создать переменную которая будет хранить данные из публичных api.
 
-      // 2. При клике на кнопку с классом messageBtn необходимо элементу с классом message:
-      // - добавить два класса: animate_animated и animate_fadeInLeftBig
-      // - поставить данному элементу стиль visibility в значение 'visible'.
-      document.querySelector(".messageBtn").addEventListener("click", (e) => {
-        document
-          .querySelector(".message")
-          .classList.add("animate_animated", "animate_fadeInLeftBig");
-        document.querySelector(".message").style = "visibility : visible;";
-      });
-      // 3. Необходимо при отправке формы проверить, заполнены ли все поля в этой форме. Если какое-либо поле не заполнено, форма не должна отправляться, также должны быть подсвечены незаполненные поля (необходимо поставить класс error незаполненным полям). Как только пользователь начинает заполнять какое-либо поле, необходимо, при вводе в данное поле, произвести проверку:
-      // - Если поле пустое, необходимо данное поле подсветить (поставить класс error данному полю).
-      // - Если поле было чем-либо заполнено, подсветку (класс error) необходимо убрать.
-      document.querySelectorAll(".form-control").forEach((element) =>
-        element.addEventListener("input", (e) => {
-          element.classList.add("error");
-          if (e.target.value != "") element.classList.remove("error");
-        })
-      );
-      document.querySelector("form button").addEventListener("click", (e) => {
-        if (document.querySelector(".form-control").value === "") {
-          document.querySelector(".form-control").classList.add("error");
-          e.preventDefault();
-        } else if (document.querySelector("select").value === "") {
-          document.querySelector("select").classList.add("error");
-          e.preventDefault();
-        }
+      // Задание 2
+      // 1. Создать файл index.html.
+      // 2. Подключить data.js.
+      // 3. Сформировать контент из данных (картинка загловок и параграф).
+      // 4. Добавить данный контент в вёрстку.
+      // 5. * Добавить стили при необходимости (по желанию).
+      const data = JSON.parse(dataInfo);
+      data.forEach((element) => {
+        const divEl = document.createElement("div");
+        divEl.classList.add("from_JSON");
+        document.querySelector(".content").appendChild(divEl);
+        const h3El = document.createElement("h3");
+        h3El.classList.add("activity");
+        h3El.textContent = element.activity;
+        divEl.appendChild(h3El);
+        const pEl = document.createElement("p");
+        pEl.classList.add("type");
+        pEl.textContent = element.type;
+        divEl.appendChild(pEl);
+        const linkEl = document.createElement("a");
+        linkEl.classList.add("link");
+        linkEl.href = element.link;
+        linkEl.textContent = "ссылка";
+        divEl.appendChild(linkEl);
       });
     </script>
   </body>
